<resources>
    <string name="app_name">practice_and</string>

    <string name="recognition_permission">android.permission.ACTIVITY_RECOGNITION</string>
    <string name="post_permission">android.permission.POST_NOTIFICATIONS</string>
    <string name="default_fcm_channelId">Oddments_and</string>
    <string name="barchart">BarChart</string>
    <string name="linechart">LineChart</string>
    <string name="candlechart">CandleChart</string>
    <string name="combinechart">CombineChart</string>
    <string name="webView">Webview</string>

    <string name="temp_title">[%d]</string>
    <string name="temp_content">항목은 [%d] 입니다</string>

    <string name="btn_main">새로고침</string>
    <string name="what_can_i_do">확장함수 테스트</string>
    <string name="close_webview_ready">한번 더 누르시면 메인화면으로 이동합니다.</string>
    <string name="appwidget_text">걸음수</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">여기는 위젯 설명</string>

    <string name="select_menu">연습한 항목을 선택하세요</string>
    <string name="step_btn">걸음수 연습</string>
    <string name="webview_btn">웹뷰 연습</string>
    <string name="voice_btn">녹음 연습</string>
    <string name="stt_btn">STT 연습</string>
    <string name="qr_btn">QR-Zxing 연습</string>
    <string name="qr_btn2">QR-ML Kit 연습</string>
    <string name="snackbar_btn">스낵바 연습</string>
    <string name="stt_recorder">STT 및 녹음 동시</string>
    <string name="recyclerview_btn">리사이클러뷰 연습</string>
    <string name="calendar_btn">달력 연습</string>
    <string name="listview_btn">리스트뷰 연습</string>
    <string name="linechart_btn">라인차트 테스트</string>
    <string name="temp_btn">임시</string>
    <string name="recycler_frag">리사이클러뷰\n프래그먼트</string>
    <string name="fitness">구글 피트니스</string>
    <string name="inputsoft">키보드 관련</string>
    <string name="webtoon">네이버웹툰 앱\n따라하기</string>
    <string name="async">비동기</string>
    <string name="async_thread">스레드</string>
    <string name="async_coroutines">코루틴</string>
    <string name="inflate">Inflate</string>
    <string name="viewmodel">ViewModel</string>
    <string name="saveinstance">saveInstance\nState</string>
    <string name="null_safety">Null-Safety</string>
    <string name="landscape">Landscape</string>


    <string name="close_main_ready">한번 더 누르시면 앱을 종료합니다.</string>

    <string name="recorder_info">녹음을 시작하려면 아래 버튼을 눌러주세요</string>
    <string name="recorde_start">녹음을 시작합니다.</string>
    <string name="recorde_end">녹음을 종료합니다.</string>

    <string name="snack_create_toast">토스트!</string>

    <string name="snack_delete_record">기록을 삭제했어요.</string>
    <string name="snack_undo">실행 취소</string>

    <string name="default_timer">00 : 00</string>

    <string name="stt_info">STT 기능을 시작하려면\n아래 버튼을 누르고 말하세요.</string>
    <string name="stt_hint">결과가 이곳에 표시됩니다.</string>

    <string name="scan_qrcode">사각형 안에 QR코드를 위치시키세요</string>

    <string name="url_view">Link : %s</string>
    <string name="open_link">링크 열기</string>

    <string name="algorithm_one">방법 1</string>
    <string name="algorithm_two">방법 2</string>

    <!--
      ~ Copyright (C) 2020 The Android Open Source Project
      ~
      ~ Licensed under the Apache License, Version 2.0 (the "License");
      ~ you may not use this file except in compliance with the License.
      ~ You may obtain a copy of the License at
      ~
      ~     http://www.apache.org/licenses/LICENSE-2.0
      ~
      ~ Unless required by applicable law or agreed to in writing, software
      ~ distributed under the License is distributed on an "AS IS" BASIS,
      ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      ~ See the License for the specific language governing permissions and
      ~ limitations under the License.
      -->
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d of %d words</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try again!</string>

    <!-- Lorem Ipsum -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl tincidunt eget nullam non. Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Volutpat odio facilisis mauris sit amet massa. Commodo odio aenean sed adipiscing diam donec adipiscing tristique. Mi eget mauris pharetra et. Non tellus orci ac auctor augue. Elit at imperdiet dui accumsan sit. Ornare arcu dui vivamus arcu felis. Egestas integer eget aliquet nibh praesent. In hac habitasse platea dictumst quisque sagittis purus. Pulvinar elementum integer enim neque volutpat ac.</string>
    <string name="lorem_ipsum_2">Sit amet nulla facilisi morbi tempus. Nulla facilisi cras fermentum odio eu. Etiam erat velit scelerisque in dictum non consectetur a erat. Enim nulla aliquet porttitor lacus luctus accumsan tortor posuere. Ut sem nulla pharetra diam. Fames ac turpis egestas maecenas. Bibendum neque egestas congue quisque egestas diam. Laoreet id donec ultrices tincidunt arcu non sodales neque. Eget felis eget nunc lobortis mattis aliquam faucibus purus. Faucibus interdum posuere lorem ipsum dolor sit.</string>
</resources>